# Dreamdrive64

./: .gitignore  .gitmodules  README.md
hw/picocart64_v1_lite/: picocart64_v1_lite.kicad_pcb  picocart64_v1_lite.kicad_pro  picocart64_v1_lite.kicad_sch
hw/picocart64_v2/: board.kicad_sch  picocart64_v2.kicad_pcb  picocart64_v2.kicad_prl  picocart64_v2.kicad_pro  picocart64_v2.kicad_sch  psram.kicad_sch
sw/: CMakeLists.txt
sw/dreamdrive64/: CMakeLists.txt  debug.c  debug.h  mcu1.c  mcu2.c  memmap_custom.ld  n64_pi_task.c  sram.c  sram.h
sw/dreamdrive64/joybus/: joybus.c
sw/dreamdrive64/sdcard/: internal_sd_card.c  internal_sd_card.h
sw/n64/: README.md
sw/n64/dream_os/: Makefile  animation.c  animation.h  rom_defs.h  shell.c  shell_utils.c
sw/n64/testrom/: Makefile  pc64_sdfs.c  pc64_utils.c  pc64_utils.h  shell.c  shell.h  testrom.c
sw/n64_cic/: n64_cic.c
sw/n64_cic/include/: n64_cic.h
sw/picocart64/: CMakeLists.txt  cic.c  n64_pi.c  picocart64.c  sd_card.c  sd_card.h
sw/picocart64/utils/: CMakeLists.txt  n64_data_control.pio  n64_data_control.pio.h  n64_data_tester.pio  n64_data_tester.pio.h  n64_pi.pio.h  picocart64_pins.h  picocart_utils.c  source.c  test.pio
sw/picocart64_shared/include/: pc64_regs.h
sw/picocart64_v1/: picocart64_v1.c
sw/picocart64_v2/: CMakeLists.txt  mcu1.c  mcu2.c  n64_pi_task.c  picocart64_v2.c  pins_mcu2.h  psram.c  psram_array.c  psram_array.h  qspi_helper.c  qspi_helper.h  sha256.c  sha256.h  sram.c  utils.h
sw/picocart64_v2/flash_array/: program_flash_array.c
sw/picocart64_v2/joybus/: joybus.c
sw/picocart64_v2/led/: led_task.c
sw/picocart64_v2/libretro/: dd64_libretro_filestream.c  file_stream.h  libretro.h  libretrodb.c  libretrodb.h  libretrodb_tool.c  query.c  query.h  rmsgpack.c  rmsgpack.h  rmsgpack_dom.c  rmsgpack_dom.h  stdstring.h  strl.h
sw/picocart64_v2/pio_spi/: pio_spi.c  pio_spi.h  pio_spi.pio
sw/picocart64_v2/pio_uart/: pio_uart.c  pio_uart.pio
sw/picocart64_v2/sdcard/: hw_config.c  internal_sd_card.c  internal_sd_card.h
